implement simple edition of personal contact
